tests/lime/fail/tokens/label_rest/byte_45.wsa
jmp .l- .l-: push 45
